...
    <string name="product_media_position">%1$d / %2$d</string>
    <string name="product_media_expand">G&#246;rseli b&#252;y&#252;t</string>
    <string name="close">Kapat</string>
    <string name="wishlist_title">Listem</string>
    <string name="wishlist_device_only">Bu liste yaln&#305;zca bu cihazda saklan&#305;r.</string>
    <string name="wishlist_save">Listeme ekle</string>
    <string name="wishlist_remove">Listemden kald&#305;r</string>
    <string name="wishlist_saved_state">Listemde</string>
    <string name="wishlist_not_saved_state">Listemde de&#287;il</string>
    <string name="wishlist_updating">Liste g&#252;ncelleniyor</string>
    <string name="wishlist_empty">Listeniz hen&#252;z bo&#351;.</string>
    <string name="wishlist_empty_body">&#304;ncelemek istedi&#287;iniz &#252;r&#252;nleri &#8220;Listeme ekle&#8221; ile burada biriktirebilirsiniz.</string>
    <string name="wishlist_browse">&#220;r&#252;nleri incele</string>
    <string name="wishlist_clear">Listeyi temizle</string>
    <string name="wishlist_clear_title">Listenizdeki t&#252;m &#252;r&#252;nler kald&#305;r&#305;ls&#305;n m&#305;?</string>
    <string name="wishlist_clear_message">Bu cihazdaki liste temizlenir. Hesab&#305;n&#305;z ve Shopify sepetiniz de&#287;i&#351;mez.</string>
    <string name="wishlist_clear_cancel">Vazge&#231;</string>
    <string name="wishlist_loading_title">Listem y&#252;kleniyor</string>
    <string name="wishlist_loading_body">Bu cihazdaki liste kontrol ediliyor.</string>
    <string name="wishlist_storage_title">Listem kullan&#305;lam&#305;yor</string>
    <string name="wishlist_storage_unavailable">Bu cihazdaki liste kullan&#305;lam&#305;yor. Hi&#231;bir &#252;r&#252;n de&#287;i&#351;tirilmedi.</string>
    <string name="wishlist_partial_title">Listenizdeki baz&#305; &#252;r&#252;nler g&#252;ncellenemedi</string>
    <string name="wishlist_partial_body">&#220;r&#252;nler listenizde korunuyor. Ba&#287;lant&#305; d&#252;zeldi&#287;inde g&#252;ncel bilgileri yeniden deneyin.</string>
    <string name="wishlist_retry_products">G&#252;ncel &#252;r&#252;n bilgilerini yeniden dene</string>
    <string name="wishlist_product_removed">Listenizdeki bu &#252;r&#252;n art&#305;k mevcut de&#287;il.</string>
    <string name="wishlist_product_connection">Listenizdeki bu &#252;r&#252;n&#252;n g&#252;ncel bilgisi y&#252;klenemedi. &#220;r&#252;n cihazda saklanmaya devam ediyor.</string>
    <string name="wishlist_product_configuration">Listenizdeki bu &#252;r&#252;n bu yap&#305;land&#305;rmada y&#252;klenemiyor. &#220;r&#252;n cihazda saklanmaya devam ediyor.</string>
    <string name="wishlist_product_service">Listenizdeki bu &#252;r&#252;n&#252;n g&#252;ncel bilgisi kullan&#305;lam&#305;yor. &#220;r&#252;n cihazda saklanmaya devam ediyor.</string>
    <plurals name="wishlist_product_count">
        <item quantity="one">%d &#252;r&#252;n</item>
        <item quantity="other">%d &#252;r&#252;n</item>
    </plurals>
    <string name="cancel">Vazge&#231;</string>
    <string name="product_add_to_cart">Sepete ekle</string>
...
    <string name="update_policy_maintenance_title">Bak&#305;m bilgilendirmesi</string>
    <string name="update_policy_maintenance_message">Baz&#305; &#231;evrim i&#231;i i&#351;lemler ge&#231;ici olarak etkilenebilir. Katalog ile yard&#305;m yollar&#305; a&#231;&#305;k kal&#305;r.</string>
    <string name="update_policy_retry">Yeniden denetle</string>
    <string name="update_policy_help">Yard&#305;m ve politikalar</string>
    <string name="update_policy_defer">Daha sonra</string>
    <string name="update_policy_dismiss">Kapat</string>
    <string name="wishlist_product_checking">G&#252;ncel &#252;r&#252;n bilgileri kontrol ediliyor. &#220;r&#252;n bu cihazdaki listenizde kal&#305;r.</string>
</resources>

